--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@iconify/icons-devicon": "^1.2.9",
+    "@iconify/react": "^4.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
