--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -20,12 +21,17 @@
     "next": "13.4.4",
     "next-fonts": "^1.5.1",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "react-reveal": "^1.2.2",
+    "react-tooltip": "^5.13.2",
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@iconify/icons-devicon": "^1.2.9",
     "@iconify/react": "^4.1.0",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
